<resources>
    <string name="app_name">Időugró alkalmazás</string>
    <string name="sunriseHeaderString">Napkelte</string>
    <string name="sunsetHeaderString">Napnyugta</string>
    <string name="windHeaderString">Szélerősség</string>
    <string name="pressureHeaderString">Légnyomás</string>
    <string name="humidityHeaderString">Páratartalom</string>
    <string name="developerHeaderString">Fejlesztő</string>
    <string name="developerString">Vilmos Vass</string>
    <string name="errorMessageString">Hiba! Kérem próbálja újra.</string>
    <string name="locationString">Helyszín, HU</string>
    <string name="lastUpdateString">Utolsó frissítés</string>
    <string name="weatherStatusString">Felhős</string>
    <string name="temperatureString">27°C</string>
    <string name="developer">Vilmos Vass</string>
    <string name="sunrise">Napkelte</string>
    <string name="sunset">Napnyugta</string>
    <string name="wind">Szélerősség</string>
    <string name="pressure">Légnyomás</string>
    <string name="humidity">Páratartalom</string>
    <string name="created_by">Fejlesztette</string>
    <string name="versionCode">verzió 1.1</string>
    <string name="inputFieldPlaceholder">Város</string>
</resources>