<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@drawable/gradient_background">

    <RelativeLayout android:id="@+id/mainContainer" android:layout_width="match_parent"
        android:layout_height="match_parent" android:visibility="visible">
        <LinearLayout android:id="@+id/addressContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:gravity="center">
            <TextView android:id="@+id/address" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="24dp"
                android:text="@string/locationString"/>
            <TextView android:id="@+id/updated_at" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="14dp"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Clear Sky"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="29°C"
                android:textSize="90dp" />

        </LinearLayout>


        <LinearLayout android:id="@+id/detailsContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:weightSum="3">
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:backgroundTint="#DBF106"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12dp" android:text="@string/sunrise"/>
                    <TextView android:id="@+id/sunrise" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14dp"/>
                </LinearLayout>
                <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:backgroundTint="#FF9800"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12dp" android:text="@string/sunset"/>
                    <TextView android:id="@+id/sunset" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14dp"/>
                </LinearLayout>
                <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/wind"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12dp" android:text="@string/wind"/>
                    <TextView android:id="@+id/wind" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14dp"/>
                </LinearLayout>
            </LinearLayout>

            <Space android:layout_width="wrap_content" android:layout_height="10dp"/>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:weightSum="3">
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:backgroundTint="#06F1DD"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12dp" android:text="@string/pressure"/>
                    <TextView android:id="@+id/pressure" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14dp" />
                </LinearLayout>
                <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:backgroundTint="#29F106"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12dp" android:text="@string/humidity"/>
                    <TextView android:id="@+id/humidity" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14dp"/>
                </LinearLayout>
                <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:backgroundTint="#8727BA"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/info"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12dp" android:text="@string/created_by"/>
                    <TextView android:id="@+id/about" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14dp"
                        android:text="@string/developer"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <ProgressBar android:id="@+id/loader" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView android:id="@+id/errorText" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerInParent="true"
        android:visibility="gone" android:text="Something went wrong"/>


</RelativeLayout>

